--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Asana Take Home Excercise</title>
+  <title>Pet Adoption Gallery</title>
+  <meta name="description" content="Pet Adoption - Search dogs near you. Adopt a Pet Today. Pictures of dogs and cats who need a home.">
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 
