--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pet Adoption Gallery</title>
   <meta name="description" content="Pet Adoption - Search dogs near you. Adopt a Pet Today. Pictures of dogs and cats who need a home.">
-
+  <link rel="icon"  type="image/x-icon" href="/assets/images/favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 
